Fixed gap in popup text

--- a/Style/main.css
+++ b/Style/main.css
@@ -39,7 +39,7 @@ body {
     padding: 10px;
 }
 
-ul {
+.links {
     list-style-type: none;
     margin: 0;
     padding-top: 20px;
